# email-checker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  INTEGRATION.md  QUICKSTART.md  README.md  input.json  package.json  start.sh  tsconfig.json
.actor/: README.md  actor.json  input_schema.json  output_schema.json
backend/: Cargo.toml  Dockerfile
check-if-email-exists/: README.md  package-lock.json
check-if-email-exists/.actor/: actor.json
check-if-email-exists/backend/: backend_config.toml
core/: Cargo.toml
node-addon/: Cargo.toml  README.md  index.ts  napi.config.json  package.json
node-addon/src/: lib.rs
sqs/: Cargo.toml
src/: main.ts
