[package]
name = "check-if-email-exists-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "check_if_email_exists_node"

[build-dependencies]
napi-build = "2"

[dependencies]
check-if-email-exists = { path = "../core" }
napi = { version = "2", features = ["napi8", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

